# pcyp_repaso_cuda

./: CMakeLists.txt  main.cu
